update_ v10: fix on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -848,11 +848,14 @@ button.swal2-confirm.swal2-styled {
 
 .partnerProjectDescription {
   width: 33.3%;
+  @media (width <= 990px) {
+    width: 100%;
+  }
 
   p {
     width: 100%;
     text-align: justify;
-    @media (width <=990px) {
+    @media (width <= 990px) {
       width: 100%;
       font-size: 14px;
     }
@@ -876,10 +879,6 @@ button.swal2-confirm.swal2-styled {
   overflow: hidden;
   transition: max-height 0.3s ease-in-out, padding 0.3s ease-in-out;
   padding: 0;
-}
-
-.partnerProjectInfoClients.open {
-  max-height: 500px;
 }
 
 .partnerFieldTitle {
@@ -962,9 +961,10 @@ button.swal2-confirm.swal2-styled {
 
 .partnerLogoContainerAlt {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  // justify-content: center;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
 
   @media (width <=990px) {}
 
@@ -1014,15 +1014,17 @@ button.swal2-confirm.swal2-styled {
 }
 
 .clientContainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  // grid-template-columns: 1fr 1fr;
+  // align-items: center;
+  // justify-items: center;
 
   @media (width <=990px) {}
 
+  .clientLogo,
   .partnerLogo {
-    width: 160px;
+    max-width: 150px;
   }
 }
 
@@ -1076,10 +1078,10 @@ button.swal2-confirm.swal2-styled {
 }
 
 .partnerProjectInfoClients.open {
-  max-height: 300px;
+  max-height: 380px;
 
   @media (width <=990px) {
-    min-height: 500px;
+    min-height: fit-content;
   }
 }
 
